# k9b

./: .clinerules  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile.python  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  task_progress.md
.clinerules/: 20-token-hygiene.md
.github/workflows/: dockerhub.yml
.kilocode/rules/: 00-global.md  05-fast-task-bootstrap.md  10-agent-mission.md  20-architecture-doctrine.md  30-output-contracts.md  40-tool-use.md  50-kubernetes-monitoring-domain.md
docker/: python-entrypoint.sh
docs/: alertmanager-source-distinction-audit.md  artifact-immutability-audit.md  baseline_watch_practices.md  cluster_snapshot_plan.md  coverage.md  data-model.md  dockerhub-publishing.md  logging-policy.md  security-exception-audit.md  security-glob-audit.md  security-policy.md  security-standards.md  security-subprocess-audit.md  typing.md  verification.md
docs/doctrine/: constitution.md  identity-primer.md  precedence.md  seed_rules.md
docs/schemas/: assessment-schema.md  feedback-artifact-schema.md  fixture-schema.md  health-proposal-schema.md  run-artifact-layout.md  usefulness-feedback-schema.md
docs/testing/: EPIC-TASK-BREAKDOWN.md  TEST-CLEANUP-INVENTORY.md  selected-run-refresh-regression-test-updates.md  unit-test-feedback-loop-guidelines.md
evals/: eval-EVAL-001.json
fixtures/: crashloop_incomplete.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  ThemeSwitch.tsx  api.ts  index.css  main.tsx  theme.ts  themes.css  types.ts  utils.ts
k8s_diag_agent/: __init__.py
runs/: README.md  health-baseline.example.json  health-baseline.json  health-config.local.example.json  run-config.local.example.json
scripts/: bootstrap_health_baseline.sh  build_diagnostic_pack.py  check_llamacpp_endpoint.sh  check_private_contexts.py  check_security_baseline.sh  debug_alertmanager_attribution.sh  debug_alertmanager_cluster_attribution.sh  debug_runs_state.py  diagnostic_pack_review.py  export_next_check_usefulness_review.py  import_next_check_usefulness_feedback.py  inspect_health_config.py  make_health_digest.sh  make_targeted_digest.sh  operator-check.sh  operator-review.sh  prepare_all_usefulness_review_packs.sh  report_usefulness_learning.py  review_latest_health.py  run_batch_next_checks.py  run_coverage.sh  run_health_once.sh  run_health_scheduler.py  select_review_candidate_runs.py  smoke_llamacpp_json.py  start_backend.sh  start_frontend.sh  step_runner.sh  update_ui_index.py  verify_all.sh
snapshots/: targets.local.example.json
src/k8s_diag_agent/: __init__.py  batch.py  cli.py  cli_handlers.py  datetime_utils.py  models.py  schemas.py  structured_logging.py
tests/: __init__.py  path_helper.py  test_alertmanager.py  test_alertmanager_durable_learning.py  test_alertmanager_feedback.py  test_alertmanager_source_actions.py  test_external_analysis.py  test_feedback_models.py  test_health_loop.py  test_logging_security.py  test_next_check_planner.py  test_parallel_failure.py  test_scripts.py  test_security_path_validation.py  test_security_subprocess_helpers.py  test_server_read_support_security.py  test_ui_api_batch_eligibility_security.py
tests/fixtures/: incident_report_fixtures.py  incident_report_quality.py  ui_index_sample.py
tests/integration/: __init__.py  test_cli_assessment.py
(+451 files in other folders)
