[project]
name = "k8s-diag-agent"
version = "0.1.0"
description = "Fixture-driven Kubernetes diagnostics pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
[project.optional-dependencies]
dev = ["mypy>=1.9"]
[project.scripts]
k8s-diag-agent = "k8s_diag_agent.cli:main"
[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "README.md", "src"]

[tool.hatch.build.targets.wheel]
include = ["src"]
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"
