[project]
name = "k8s-diag-agent"
version = "0.1.0"
description = "Fixture-driven Kubernetes diagnostics pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ijson>=3.2",
    "requests>=2.31.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
[project.optional-dependencies]
dev = [
    "mypy>=1.9",
    "types-requests>=2.31.0",
    "hypothesis>=6.9,<7",
    "pre-commit>=3.4,<4",
    "ruff>=0.0.291,<1",
]
[project.scripts]
k8s-diag-agent = "k8s_diag_agent.cli:main"
[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "README.md", "src"]

[tool.hatch.build.targets.wheel]
include = ["src"]
[tool.ruff]
target-version = "py311"
line-length = 260
extend-exclude = [
    "runs",
    ".venv",
    "snapshots",
    "artifacts",
    "exports",
]
exclude = ["__pycache__", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
per-file-ignores = {"__init__.py" = ["F401"]}
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"
